--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+elm-stuff/build-artifacts/
+elm-stuff/packages/
 
 # Typescript v1 declaration files
 typings/
