--- a/.gitignore
+++ b/.gitignore
@@ -33,10 +33,12 @@ bower_components
 build/Release
 
 # Dependency directories
+## Javascript
 node_modules/
 jspm_packages/
-elm-stuff/build-artifacts/
-elm-stuff/packages/
+## Elm
+elm-stuff/
+elm-stuff/
 
 # Typescript v1 declaration files
 typings/
