--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "ace-css": "1.1",
     "css-loader": "^0.28.7",
+    "dotenv": "^4.0.0",
     "elm-webpack-loader": "^4.4.0",
     "file-loader": "^1.1.6",
     "font-awesome": "4",
